# toct

./: .gitignore  ARM64_ENHANCEMENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  add_constants_test.s  add_constants_test.s.s  add_variables_manual.s  add_variables_manual.s.s  backend_details.md  debug_parser.ml  dune  dune-profile  dune-project  hello_test  pir_annotations.md  portable_ir_spec.md  portable_ir_spec_old.md  test_addition  test_addition.s  test_annotation.c  test_arith  test_arithmetic  test_arithmetic.s  test_bitwise  test_bitwise.s  test_function_call.s  test_function_decl  test_function_decl.c  test_integrated.c  test_loop_simple.s  test_loop_simple_v2.s  test_loop_simple_v2.s.s  test_loop_simple_v3.s  test_loop_simple_v3.s.s  test_macho_generation.ml  test_output  test_output.s  test_preprocess.ml  (+14 more)
_build/: .db  .digest-db  log
_build/default/: META.compilerkit  compilerkit-test.dune-package  compilerkit-test.install  compilerkit.dune-package  compilerkit.install  test_macho_output.ml
docs/: c_frontend_integration.md  c_frontend_integration_summary.md
examples/: README.md  dune  fibonacci.ml  memory_ops.ml
examples/c_frontend/: DEVELOPMENT_NOTES.md  PATTERN_IMPLEMENTATION_GUIDE.md  annotated_ast.ml  ast.ml  blank_line_test.ml  c_annotated_ast.ml  c_annotated_pir_generator.ml  c_ast_annotator.ml  c_errors.mli  c_lexer_utils.ml  c_pir_generator.ml  c_scoped_symbol_table.ml  c_symbol_table.mli  c_type_checker.ml  c_type_system.ml  ccc.ml  debug_conditional.ml  debug_conditional_stack.ml  debug_expr.ml  dune  lexer.ml  lexer.mli  parser.ml  preprocessor.mli  simple_test.ml  simple_type_test.ml  test_addition.c  test_annotated_array.ml  test_annotated_pir.ml  test_annotation.ml  test_array_out.s  test_conditional.ml  test_control_flow.c  test_debug_array.ml  test_debug_backend.ml  test_debug_backend_vars.ml  test_debug_if.ml  test_debug_variables.ml  test_dump_pir.ml  test_end_to_end.ml  (+25 more)
examples/pir/: factorial.pir  fibonacci.pir  (+4 more)
include/: stdio.h  stdio_simple.h  stdlib.h  string.h
lib/: dune
lib/backend/: arm64_backend.ml  codegen.ml  compilerkit_backend.ml  dominance.ml  dune  instruction_selection.ml  machine.ml  macho_writer.ml  register_allocator.ml  ssa_block_params.ml  ssa_verify.ml  x86_64_backend.ml
lib/frontend/: ast_annotation.ml  ast_annotation.mli  compilerkit_frontend.ml  dune  grammar_utils.ml  parser_utils.ml  parser_utils.mli  position.ml  pratt.ml  preprocessor_utils.ml  symbol_table.ml  test_utils.ml  token_location.mli  type_system.ml
test/: dune  test_enhanced_arm64.ml  test_parser_combinators.ml  test_pir_extended.ml  test_runner.ml  test_runner_simple.ml  test_simple_debug.ml  test_type_system.ml
test/c_frontend/: README.md  TEST_CATALOG.md  add_test  add_test.s  demo_preprocessor_testing.py  run_tests.py  run_tests_ccc.py  simple_test  simple_test.s  test_arithmetic.c  test_array.c  test_bitwise.c  test_ccc.py  test_function_call.c  test_printf.c  test_printf_simple.c  test_simple_if.c  test_while_loop.c  var_test  var_test.s
test/c_frontend/basic/: arithmetic.c  arithmetic.expected  constants.c  constants.expected  if_else.c  if_else.expected  logical_ops.c  logical_ops.expected  loops.c  loops.expected  sizeof_test.c  sizeof_test.expected  variables.c  variables.expected
test/c_frontend/functions/: function_pointers.c  function_pointers.expected  recursion.c  recursion.expected  simple_func.c  simple_func.expected  varargs.c  varargs.expected  void_func.c  void_func.expected
test/c_frontend/negative/: function_mismatch.c  function_mismatch.expected_error  missing_return  missing_return.c  missing_return.expected_error  syntax_errors.c  syntax_errors.expected_error  type_errors.c  type_errors.expected_error  undeclared_var.c  undeclared_var.expected_error
test/c_frontend/pointers/: arrays.c  arrays.expected  basic_pointers.c  basic_pointers.expected  multidim_arrays.c  multidim_arrays.expected  pointer_arithmetic.c  pointer_arithmetic.expected
test/c_frontend/preprocessor/: README.md
test/c_frontend/preprocessor/basic/: include_test.c  include_test.expected  include_test.h  macro_redefinition.c  macro_redefinition.expected  predefined_macros.c  predefined_macros.expected  simple_defines.c  simple_defines.expected  simple_defines_no_includes.c  simple_defines_no_includes.c.preprocessed  simple_defines_no_includes.preprocessed
test/c_frontend/preprocessor/complex/: advanced_macros.c  advanced_macros.expected  macro_recursion.c  macro_recursion.expected  stringification.c  stringification.expected  stringification_test.c  stringification_test.preprocessed  token_pasting.c  token_pasting.expected
test/c_frontend/preprocessor/conditional/: complex_nesting.c  complex_nesting.expected  conditional_test.c  conditional_test.c.preprocessed  conditional_test.preprocessed  if_expressions.c  if_expressions.expected  ifdef_ifndef.c  ifdef_ifndef.expected  platform_specific.c  platform_specific.expected
test/c_frontend/preprocessor/functions/: macro_expansion_test.c  macro_expansion_test.c.preprocessed  macro_expansion_test.preprocessed  macro_side_effects.c  macro_side_effects.expected  nested_macros.c  nested_macros.expected  simple_function_macros.c  simple_function_macros.expected  variadic_macros.c  variadic_macros.expected
test/c_frontend/preprocessor/negative/: invalid_directive.c  invalid_directive.expected_error  macro_redefinition_error.c  macro_redefinition_error.expected_error  missing_include.c  missing_include.expected_error  undefined_macro.c  undefined_macro.expected_error  unterminated_if.c  unterminated_if.expected_error
test/c_frontend/simple/: add_constants.c  add_variables.c  return_constant_ccc.s
test/c_frontend/structs/: basic_struct.c  basic_struct.expected  nested_struct.c  nested_struct.expected  struct_pointers.c  struct_pointers.expected  typedef_test.c  typedef_test.expected  unions.c  unions.expected
test/unit/: test_pir_attributes.ml  test_pir_instructions.ml  test_pir_types.ml  test_pir_values.ml
test_programs/: factorial.c  hello.c  simple_math.c
(+763 files in other folders)
