(test
 (name test_runner_simple)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_frontend compilerkit_backend compilerkit_target))

(test
 (name test_pir_spec)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir))

(test
 (name test_pretty_printer_spec)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir))

(test
 (name test_parser_combinators)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_frontend))