(test
 (name test_runner_simple)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_frontend compilerkit_backend compilerkit_target))

(test
 (name test_pir_spec)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir))

(test
 (name test_pretty_printer_spec)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir))

(test
 (name test_parser_combinators)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_frontend))

(test
 (name test_type_system)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_frontend))

(test
 (name test_ssa)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_backend))

(test
 (name test_pir_extended)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir))

(test
 (name test_codegen)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_backend))

(test
 (name test_arm64_backend)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_backend))

(test
 (name test_enhanced_arm64)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_backend))

(test
 (name test_simple_debug)
 (package compilerkit-test)
 (modes byte)
 (libraries compilerkit_common compilerkit_pir compilerkit_backend))