(library
 (name c_frontend)
 (libraries unix)
 (modules preprocessor lexer ast symbol_table parser))

(executable
 (name test_preprocessor)
 (libraries c_frontend)
 (modules test_preprocessor)
 (modes byte))

(executable
 (name debug_preprocessor)
 (libraries c_frontend)
 (modules debug_preprocessor)
 (modes byte))

(executable
 (name simple_test)
 (libraries c_frontend)
 (modules simple_test)
 (modes byte))

(executable
 (name test_with_actual_files)
 (libraries c_frontend)
 (modules test_with_actual_files)
 (modes byte))

(executable
 (name trace_preprocessor)
 (libraries c_frontend)
 (modules trace_preprocessor)
 (modes byte))

(executable
 (name test_conditional)
 (libraries c_frontend)
 (modules test_conditional)
 (modes byte))

(executable
 (name debug_conditional)
 (libraries c_frontend)
 (modules debug_conditional)
 (modes byte))

(executable
 (name debug_expr)
 (libraries c_frontend)
 (modules debug_expr)
 (modes byte))

(executable
 (name debug_conditional_stack)
 (libraries c_frontend)
 (modules debug_conditional_stack)
 (modes byte))

(executable
 (name print_tokens)
 (libraries c_frontend)
 (modules print_tokens)
 (modes byte))

(executable
 (name minimal_test)
 (libraries c_frontend)
 (modules minimal_test)
 (modes byte))

(executable
 (name blank_line_test)
 (libraries c_frontend)
 (modules blank_line_test)
 (modes byte))

(executable
 (name trace_full_test)
 (libraries c_frontend)
 (modules trace_full_test)
 (modes byte))

(executable
 (name test_endif)
 (libraries c_frontend)
 (modules test_endif)
 (modes byte))

(executable
 (name test_lexer)
 (libraries c_frontend)
 (modules test_lexer)
 (modes byte))

(executable
 (name test_parser)
 (libraries c_frontend)
 (modules test_parser)
 (modes byte))

(executable
 (name test_parse_all)
 (libraries c_frontend)
 (modules test_parse_all)
 (modes byte))

(executable
 (name test_typedef)
 (libraries c_frontend)
 (modules test_typedef)
 (modes byte))

(executable
 (name test_typedef_debug)
 (libraries c_frontend)
 (modules test_typedef_debug)
 (modes byte))

(executable
 (name test_typedef_full)
 (libraries c_frontend)
 (modules test_typedef_full)
 (modes byte))

(executable
 (name test_tokenpos)
 (libraries c_frontend)
 (modules test_tokenpos)
 (modes byte))

(executable
 (name test_typedef_trace)
 (libraries c_frontend)
 (modules test_typedef_trace)
 (modes byte))

(executable
 (name test_typedef_func)
 (libraries c_frontend)
 (modules test_typedef_func)
 (modes byte))

(executable
 (name test_typedef_scope)
 (libraries c_frontend)
 (modules test_typedef_scope)
 (modes byte))

(executable
 (name test_typedef_ast)
 (libraries c_frontend)
 (modules test_typedef_ast)
 (modes byte))

(executable
 (name test_external_decl)
 (libraries c_frontend)
 (modules test_external_decl)
 (modes byte))

(rule
 (alias runtest)
 (action (run ./test_preprocessor.exe)))