(library
 (name c_frontend)
 (libraries unix compilerkit.frontend compilerkit.pir)
 (modules preprocessor lexer ast parser c_symbol_table c_errors c_lexer_utils c_type_system c_scoped_symbol_table c_type_checker c_pir_generator c_annotated_ast c_ast_annotator c_annotated_pir_generator))

(executable
 (name test_preprocessor)
 (libraries c_frontend)
 (modules test_preprocessor)
 (modes byte))

(executable
 (name simple_test)
 (libraries c_frontend)
 (modules simple_test)
 (modes byte))

(executable
 (name test_with_actual_files)
 (libraries c_frontend)
 (modules test_with_actual_files)
 (modes byte))

(executable
 (name trace_preprocessor)
 (libraries c_frontend)
 (modules trace_preprocessor)
 (modes byte))

(executable
 (name test_conditional)
 (libraries c_frontend)
 (modules test_conditional)
 (modes byte))

(executable
 (name print_tokens)
 (libraries c_frontend)
 (modules print_tokens)
 (modes byte))

(executable
 (name minimal_test)
 (libraries c_frontend)
 (modules minimal_test)
 (modes byte))

(executable
 (name blank_line_test)
 (libraries c_frontend)
 (modules blank_line_test)
 (modes byte))

(executable
 (name trace_full_test)
 (libraries c_frontend)
 (modules trace_full_test)
 (modes byte))

(executable
 (name test_endif)
 (libraries c_frontend)
 (modules test_endif)
 (modes byte))

(executable
 (name test_lexer)
 (libraries c_frontend)
 (modules test_lexer)
 (modes byte))

(executable
 (name test_parser)
 (libraries c_frontend)
 (modules test_parser)
 (modes byte))

(executable
 (name test_parse_all)
 (libraries c_frontend)
 (modules test_parse_all)
 (modes byte))

(executable
 (name test_integrated_parser)
 (libraries c_frontend)
 (modules test_integrated_parser)
 (modes byte))

(executable
 (name test_parse_diagnostics)
 (libraries c_frontend)
 (modules test_parse_diagnostics)
 (modes byte))

(executable
 (name test_preprocess_debug)
 (libraries c_frontend)
 (modules test_preprocess_debug)
 (modes byte))

(executable
 (name test_annotation)
 (libraries c_frontend)
 (modules test_annotation)
 (modes byte))

(executable
 (name test_annotated_pir)
 (libraries c_frontend)
 (modules test_annotated_pir)
 (modes byte))

(executable
 (name test_simple_pir)
 (libraries c_frontend)
 (modules test_simple_pir)
 (modes byte))

(executable
 (name test_end_to_end)
 (libraries c_frontend)
 (modules test_end_to_end)
 (modes byte))

(executable
 (name ccc)
 (public_name ccc)
 (package compilerkit)
 (libraries c_frontend compilerkit.pir compilerkit.backend)
 (modules ccc)
 (modes byte))

(executable
 (name test_simple_backend)
 (libraries c_frontend compilerkit.pir compilerkit.backend)
 (modules test_simple_backend)
 (modes byte))

(executable
 (name test_dump_pir)
 (libraries c_frontend compilerkit.pir)
 (modules test_dump_pir)
 (modes byte))

(executable
 (name test_debug_backend)
 (libraries c_frontend compilerkit.pir compilerkit.backend)
 (modules test_debug_backend)
 (modes byte))

(executable
 (name test_end_to_end_debug)
 (libraries c_frontend compilerkit.pir compilerkit.backend)
 (modules test_end_to_end_debug)
 (modes byte))

(executable
 (name test_debug_variables)
 (libraries c_frontend compilerkit.pir compilerkit.backend)
 (modules test_debug_variables)
 (modes byte))

(executable
 (name test_debug_backend_vars)
 (libraries c_frontend compilerkit.pir compilerkit.backend)
 (modules test_debug_backend_vars)
 (modes byte))

(executable
 (name test_annotated_array)
 (libraries c_frontend compilerkit.pir compilerkit.backend)
 (modules test_annotated_array)
 (modes byte))

(rule
 (alias runtest)
 (action (run ./test_preprocessor.exe)))