(library
 (public_name compilerkit.backend)
 (name compilerkit_backend)
 (modes byte)
 (modules compilerkit_backend machine instruction_selection register_allocator 
          x86_64_backend arm64_backend codegen dominance ssa_block_params ssa_verify)
 (libraries compilerkit_common compilerkit_pir))