(library
 (public_name compilerkit.frontend)
 (name compilerkit_frontend)
 (modes byte)
 (modules position pratt error_reporter lexer_utils symbol_table type_system unify type_infer token_location parser_utils test_utils grammar_utils preprocessor_utils ast_annotation compilerkit_frontend)
 (libraries compilerkit_common compilerkit_pir))